[project]
name = "axial_positional_embedding"
version = "0.3.7"
description = "Axial Positional Embedding"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'positional embedding'
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
  ]

dependencies = [
    'einops>=0.8.0',
    'torch>=2.0'
]

[project.urls]
Homepage = "https://pypi.org/project/axial_positional_embedding/"
Repository = "https://github.com/lucidrains/axial_positional_embedding"

[project.optional-dependencies]
examples = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "pytest>=8.2.0",
    "pytest-examples>=0.0.10",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["axial_positional_embedding"]
